--- a/Pregunta 1.ipynb
+++ b/Pregunta 1.ipynb
@@ -793,6 +793,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 379 samples, validate on 127 samples\n",
+      "Epoch 1/5\n",
+      "379/379 [==============================] - 2s 4ms/step - loss: 152608901677125162999218176.0000 - val_loss: 1146852240707664119134775410688.0000\n",
+      "Epoch 2/5\n",
+      "379/379 [==============================] - 0s 61us/step - loss: nan - val_loss: nan            \n",
+      "Epoch 3/5\n",
+      "379/379 [==============================] - 0s 87us/step - loss: nan - val_loss: nan\n",
+      "Epoch 4/5\n",
+      "379/379 [==============================] - 0s 93us/step - loss: nan - val_loss: nan\n",
+      "Epoch 5/5\n",
+      "379/379 [==============================] - 0s 77us/step - loss: nan - val_loss: nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = network()\n",
+    "sgd = SGD(lr=0.2)\n",
+    "model.compile(optimizer=sgd,loss='mean_squared_error')\n",
+    "hist = model.fit(X_train_scaled, y_train_scaled, epochs=5,verbose=1, \n",
+    "                 validation_data=(X_test_scaled, y_test_scaled))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1075,15 +1106,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "127/127 [==============================] - 1s 5ms/step\n",
+      "Test loss for sigmoid:  0.3727326569125408\n",
+      "127/127 [==============================] - 1s 6ms/step\n",
+      "Test loss for ReLU:  0.20173660923880854\n"
+     ]
+    }
+   ],
+   "source": [
+    "# models without regularization\n",
+    "model = network(activation='sigmoid')\n",
+    "sgd = SGD(lr=0.01)\n",
+    "model.compile(optimizer=sgd,loss='mean_squared_error')\n",
+    "model.fit(X_train_scaled, y_train_scaled, epochs=300, verbose=0)\n",
+    "print(\"Test loss for sigmoid: \", model.evaluate(X_test_scaled, y_test_scaled))\n",
+    "\n",
+    "model = network(activation='relu')\n",
+    "model.compile(optimizer=sgd,loss='mean_squared_error')\n",
+    "model.fit(X_train_scaled, y_train_scaled, epochs=300, verbose=0)\n",
+    "print(\"Test loss for ReLU: \", model.evaluate(X_test_scaled, y_test_scaled))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.layers import Dropout\n",
-    "model = Sequential()\n",
-    "...\n",
-    "model.add(Dropout(0.2))\n",
-    "..."
+    "\n",
+    "def dropout_network(rate, activation='sigmoid'):\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(200, input_dim=X_train_scaled.shape[1], kernel_initializer='uniform'))\n",
+    "    model.add(Activation(activation))\n",
+    "    model.add(Dropout(rate))\n",
+    "    model.add(Dense(1, kernel_initializer='uniform'))\n",
+    "    model.add(Activation('linear'))\n",
+    "    sgd = SGD(lr=0.01)\n",
+    "    model.compile(optimizer=sgd,loss='mean_squared_error')\n",
+    "    model.fit(X_train_scaled, y_train_scaled, epochs=300, verbose=0)\n",
+    "    print(\"Test loss for \" + activation + \": \", model.evaluate(X_test_scaled, y_test_scaled))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Using rate = 0.000100 ---\n",
+      "127/127 [==============================] - 1s 6ms/step\n",
+      "Test loss for sigmoid:  0.36421061489056417\n",
+      "127/127 [==============================] - 1s 5ms/step\n",
+      "Test loss for relu:  0.19675395520418648\n",
+      "--- Using rate = 0.001000 ---\n",
+      "127/127 [==============================] - 1s 6ms/step\n",
+      "Test loss for sigmoid:  0.3607154875759065\n",
+      "127/127 [==============================] - 1s 6ms/step\n",
+      "Test loss for relu:  0.2023577667244776\n",
+      "--- Using rate = 0.010000 ---\n",
+      "127/127 [==============================] - 1s 5ms/step\n",
+      "Test loss for sigmoid:  0.4256292011324815\n",
+      "127/127 [==============================] - 1s 5ms/step\n",
+      "Test loss for relu:  0.20188942352148492\n",
+      "--- Using rate = 0.100000 ---\n",
+      "127/127 [==============================] - 1s 6ms/step\n",
+      "Test loss for sigmoid:  0.3819447353364914\n",
+      "127/127 [==============================] - 1s 7ms/step\n",
+      "Test loss for relu:  0.20238256882729494\n",
+      "--- Using rate = 0.250000 ---\n",
+      "127/127 [==============================] - 1s 6ms/step\n",
+      "Test loss for sigmoid:  0.3940967714458\n",
+      "127/127 [==============================] - 1s 6ms/step\n",
+      "Test loss for relu:  0.20244767962712942\n",
+      "--- Using rate = 0.500000 ---\n",
+      "127/127 [==============================] - 1s 6ms/step\n",
+      "Test loss for sigmoid:  0.44411384273232435\n",
+      "127/127 [==============================] - 1s 6ms/step\n",
+      "Test loss for relu:  0.20080093311981892\n",
+      "--- Using rate = 0.750000 ---\n",
+      "127/127 [==============================] - 1s 6ms/step\n",
+      "Test loss for sigmoid:  0.4938561370757621\n",
+      "127/127 [==============================] - 1s 7ms/step\n",
+      "Test loss for relu:  0.20910317920089708\n",
+      "--- Using rate = 1.000000 ---\n",
+      "127/127 [==============================] - 1s 6ms/step\n",
+      "Test loss for sigmoid:  0.36236272494154653\n",
+      "127/127 [==============================] - 1s 6ms/step\n",
+      "Test loss for relu:  0.19700179565844572\n"
+     ]
+    }
+   ],
+   "source": [
+    "ratios = [0.0001, 0.001, 0.01, 0.1, 0.25, 0.5, 0.75, 1]\n",
+    "for r in ratios:\n",
+    "    print(\"--- Using rate = %f ---\" % r)\n",
+    "    dropout_network(rate=r, activation='sigmoid')\n",
+    "    dropout_network(rate=r, activation='relu')"
    ]
   },
   {
