--- a/Pregunta 1.ipynb
+++ b/Pregunta 1.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Pregunta 1\n",
     "a)Construya un dataframe con los datos a analizar descargando los datos desde la URL mantenida por los autores de The Elements of Statistical Learning. Convierta la variable CHAS a un vector binario de dos componentes indicando las 2 posibilidades de su valor, indique la conveniencia de este paso. Describa brevemente el dataset utilizar."
    ]
   },
@@ -1077,24 +1078,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Sequential()\n",
-    "#la regularization se debe incorporar a cada capa separadamente\n",
-    "idim=X_train_scaled.shape[1]\n",
-    "model.add(Dense(200,input_dim=idim,kernel_initializer='uniform',W_regularizer=l2(0.01)))\n",
-    "model.add(Activation('sigmoid'))\n",
-    "model.add(Dense(1, kernel_initializer='uniform',W_regularizer=l2(0.01)))\n",
-    "model.add(Activation('linear'))"
+    "from keras.regularizers import *\n",
+    "\n",
+    "def regu_network(activation, first=False, second=False, regu=l1, rate=0.01 ):\n",
+    "    model = Sequential()\n",
+    "    idim=X_train_scaled.shape[1]\n",
+    "    if first:\n",
+    "        model.add(Dense(200,input_dim=idim,kernel_initializer='uniform',kernel_regularizer=regu(rate)))\n",
+    "    else:\n",
+    "        model.add(Dense(200,input_dim=idim,kernel_initializer='uniform'))\n",
+    "    model.add(Activation(activation))\n",
+    "    if second:\n",
+    "        model.add(Dense(1, kernel_initializer='uniform',kernel_regularizer=regu(rate)))\n",
+    "    else:\n",
+    "        model.add(Dense(1, kernel_initializer='uniform'))\n",
+    "    model.add(Activation('linear'))\n",
+    "    sgd = SGD(lr=0.01)\n",
+    "    model.compile(optimizer=sgd,loss='mean_squared_error')            \n",
+    "    model.fit(X_train_scaled, y_train_scaled, epochs=300, verbose=0)\n",
+    "    return model.evaluate(X_test_scaled, y_test_scaled, verbose=0)\n",
+    "    #if first or second:\n",
+    "    #    print(\"Test loss: %s with %s: %f\" \n",
+    "    #          % (activation, regu.__name__, model.evaluate(X_test_scaled, y_test_scaled, verbose=0)))\n",
+    "    #else:\n",
+    "    #    print(\"Test loss: sigmoid without regu: %f\" % model.evaluate(X_test_scaled, y_test_scaled, verbose=0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test errors using sigmoid\n",
+      "-Error Without regularization:  0.3937340444467199\n",
+      "-Two layers with l1:  0.5458360722684484\n",
+      "-Two layers with l2:  0.4271045291986991\n",
+      "-First layer with l1:  0.46524479914837935\n",
+      "-Second layer with l1:  0.4335569966965773\n",
+      "-First layer with l2:  0.40236630730741607\n",
+      "-Second layer with l2:  0.38725425748843845\n",
+      "Test errors using relu\n",
+      "-Error Without regularization:  0.20262490224650526\n",
+      "-Two layers with l1:  0.3851949769680894\n",
+      "-Two layers with l2:  0.2677680888748544\n",
+      "-First layer with l1:  0.3073579904835994\n",
+      "-Second layer with l1:  0.27789781459673185\n",
+      "-First layer with l2:  0.23111063611554347\n",
+      "-Second layer with l2:  0.22694289836827225\n"
+     ]
+    }
+   ],
+   "source": [
+    "for activation in ['sigmoid', 'relu']:\n",
+    "    print(\"Test errors using\", activation)\n",
+    "    print(\"-Error Without regularization: \", regu_network(activation))\n",
+    "    print(\"-Two layers with l1: \", regu_network(activation, first=True, second=True, regu=l1))\n",
+    "    print(\"-Two layers with l2: \", regu_network(activation, first=True, second=True, regu=l2))\n",
+    "    print(\"-First layer with l1: \", regu_network(activation, first=True, second=False, regu=l1))\n",
+    "    print(\"-Second layer with l1: \", regu_network(activation, first=False, second=True, regu=l1))\n",
+    "    print(\"-First layer with l2: \", regu_network(activation, first=True, second=False, regu=l2))\n",
+    "    print(\"-Second layer with l2: \", regu_network(activation, first=False, second=True, regu=l2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "ratios = [0.0001, 0.001, 0.01, 0.1, 0.5]\n",
+    "ssr=0.393734\n",
+    "rsr=0.202624\n",
+    "sigmoid_error = [[],[]]\n",
+    "relu_error = [[],[]]\n",
+    "\n",
+    "for r in ratios[]:\n",
+    "    sigmoid_error[0].append(regu_network('sigmoid', first=True, second=True, regu=l1, rate=r))\n",
+    "    sigmoid_error[1].append(regu_network('sigmoid', first=True, second=True, regu=l2, rate=r))\n",
+    "    relu_error[0].append(regu_network('relu', first=True, second=True, regu=l1, rate=r))\n",
+    "    relu_error[1].append(regu_network('relu', first=True, second=True, regu=l2, rate=r))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sigmoid with l1\n",
+      "-- Ratio: sin rg Error: 0.393734\n",
+      "-- Ratio: 0.0001 Error: 0.378398\n",
+      "-- Ratio: 0.0010 Error: 0.458635\n",
+      "-- Ratio: 0.0100 Error: 0.545767\n",
+      "-- Ratio: 0.1000 Error: 1.114228\n",
+      "-- Ratio: 0.5000 Error: 4.689557\n",
+      "Sigmoid with l2\n",
+      "-- Ratio: sin rg Error: 0.393734\n",
+      "-- Ratio: 0.0001 Error: 0.365780\n",
+      "-- Ratio: 0.0010 Error: 0.370016\n",
+      "-- Ratio: 0.0100 Error: 0.428381\n",
+      "-- Ratio: 0.1000 Error: 0.769470\n",
+      "-- Ratio: 0.5000 Error: 0.962167\n",
+      "ReLU with l1\n",
+      "-- Ratio: sin rg Error: 0.202624\n",
+      "-- Ratio: 0.0001 Error: 0.378398\n",
+      "-- Ratio: 0.0010 Error: 0.458635\n",
+      "-- Ratio: 0.0100 Error: 0.545767\n",
+      "-- Ratio: 0.1000 Error: 1.114228\n",
+      "-- Ratio: 0.5000 Error: 4.689557\n",
+      "ReLU with l2\n",
+      "-- Ratio: sin rg Error: 0.202624\n",
+      "-- Ratio: 0.0001 Error: 0.365780\n",
+      "-- Ratio: 0.0010 Error: 0.370016\n",
+      "-- Ratio: 0.0100 Error: 0.428381\n",
+      "-- Ratio: 0.1000 Error: 0.769470\n",
+      "-- Ratio: 0.5000 Error: 0.962167\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Sigmoid with l1\\n-- Ratio: sin rg Error:\", ssr)\n",
+    "for i,j in zip(ratios,sigmoid_error[0][1:]):\n",
+    "    print(\"-- Ratio: %.4f Error: %.6f\" % (i,j))\n",
+    "print(\"Sigmoid with l2\\n-- Ratio: sin rg Error:\", ssr)\n",
+    "for i,j in zip(ratios,sigmoid_error[1][1:]):\n",
+    "    print(\"-- Ratio: %.4f Error: %.6f\" % (i,j))\n",
+    "print(\"ReLU with l1\\n-- Ratio: sin rg Error:\", rsr)\n",
+    "for i,j in zip(ratios,sigmoid_error[0][1:]):\n",
+    "    print(\"-- Ratio: %.4f Error: %.6f\" % (i,j))\n",
+    "print(\"ReLU with l2\\n-- Ratio: sin rg Error:\", rsr)\n",
+    "for i,j in zip(ratios,sigmoid_error[1][1:]):\n",
+    "    print(\"-- Ratio: %.4f Error: %.6f\" % (i,j))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -1106,17 +1236,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "127/127 [==============================] - 1s 5ms/step\n",
-      "Test loss for sigmoid:  0.3727326569125408\n",
       "127/127 [==============================] - 1s 6ms/step\n",
-      "Test loss for ReLU:  0.20173660923880854\n"
+      "Test loss for sigmoid:  0.3682471446868942\n",
+      "127/127 [==============================] - 1s 6ms/step\n",
+      "Test loss for ReLU:  0.20062124482759341\n"
      ]
     }
    ],
