explicaciones learning rate

--- a/Pregunta 1.ipynb
+++ b/Pregunta 1.ipynb
@@ -571,33 +571,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "b) Muestre en un gráfico el error cuadrático (MSE) para el conjunto de entrenamiento y de pruebas vs número de epochs de entrenamiento, para una red feedforward de 3 capas, con 200 unidades ocultas y función de activación sigmoidal. Entrene la red usando gradiente descendente estocástico con tasa de aprendizaje (learning rate) 0.01 y 300 epochs de entrenamiento, en el conjunto de entrenamiento y de pruebas. Comente. Si observara divergencia durante el entrenamiento, determine si esto ocurre para cada repetición del experimento."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(127, 14)\n",
-      "(379, 14)\n",
-      "(127, 1)\n",
-      "(379, 1)\n"
+      "Dimensiones train set: (379, 14)\n",
+      "Dimensiones test set: (127, 14)\n",
+      "Dimensiones y train: (379, 1)\n",
+      "Dimensiones y test: (127, 1)\n"
      ]
     }
    ],
    "source": [
-    "print(X_test_scaled.shape)\n",
-    "print(X_train_scaled.shape)\n",
-    "print(y_test_scaled.shape)\n",
-    "print(y_train_scaled.shape)"
+    "print(\"Dimensiones train set:\",X_train_scaled.shape)\n",
+    "print(\"Dimensiones test set:\", X_test_scaled.shape)\n",
+    "print(\"Dimensiones y train:\", y_train_scaled.shape)\n",
+    "print(\"Dimensiones y test:\", y_test_scaled.shape)\n"
    ]
   },
   {
@@ -606,7 +599,7 @@
    "source": [
     ">b) Muestre en un gráfico el error cuadrático (MSE) para el conjunto de entrenamiento y de pruebas vs número de epochs de entrenamiento, para una red feedforward de 3 capas, con 200 unidades ocultas y función de activación sigmoidal. Entrene la red usando gradiente descendente estocástico con tasa de aprendizaje (learning rate) 0.01 y 300 epochs de entrenamiento, en el conjunto de entrenamiento y de pruebas. Comente. Si observara divergencia durante el entrenamiento, determine si esto ocurre para cada repetición del experimento.\n",
     "\n",
-    "s"
+    "Se procede primero importanto los módulos de Keras que permitirán armar las redes neuronales con que se trabajará en la tarea. Luego se genera una arquitectura **network** consistente en un red feed-forward de 3 capas y con 200 neuronas ocultas. Como se experimentará tanto como con la función de activación sigmoidal como ReLU, se pasa como parámetro al modelo. Además, se entrenará la red usando gradiente descendente estocástico con una tasa de aprendizaje fija de 0.01 y 300 epochs."
    ]
   },
   {
@@ -629,6 +622,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se genera un modelo con función de activación sigmoidal, entrenada con SGD con learning rate de 0.01 y con 300 epochs. La función de pérdida es MSE."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -640,6 +640,13 @@
     "\n",
     "hist = model.fit(X_train_scaled, y_train_scaled, epochs=300,verbose=0, \n",
     "                 validation_data=(X_test_scaled, y_test_scaled))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtenidos los resultados del error se procede a graficarlo versus el número de epochs, para el training set y el test set."
    ]
   },
   {
@@ -679,7 +686,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c) Repita el paso anterior, utilizado ’ReLU’ como función de activación y compare con lo obtenido en b)."
+    ">c) Repita el paso anterior, utilizado ’ReLU’ como función de activación y compare con lo obtenido en b).\n",
+    "\n",
+    "Se repite el mismo paso que el punto anterior, pero se cambia la función de activación por ReLU. El resto de los parámetros permanece invariante. Una vez terminado el entrenamiento se gráfica el error de train y test versus el número de epochs."
    ]
   },
   {
@@ -731,7 +740,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "d) Repita b) y c) variando la tasa de aprendizaje (learning rate) en un rango sensible. Comente. Si observara divergencia durante el entrenamiento, determine si esto ocurre para cada repetición del experimento."
+    ">d) Repita b) y c) variando la tasa de aprendizaje (learning rate) en un rango sensible. Comente. Si observara divergencia durante el entrenamiento, determine si esto ocurre para cada repetición del experimento.\n",
+    "\n",
+    "En esta sección se variará la tasa de aprendizaje, para el modelo con sigmoidal y con relu. Los valores seleccionados de learing rate son bajos pues, como se muestra más adelante, los modelos divergen con valores cercanos a 0.04 (sigmoidal) y 0.5 (relu)."
    ]
   },
   {
@@ -817,8 +828,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se muestra lo mencionado en el comienzo de esta sección, que es que el modelo con sigmoidal diverge mucho más rápido que con Relu."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -827,21 +845,38 @@
      "text": [
       "Train on 379 samples, validate on 127 samples\n",
       "Epoch 1/5\n",
-      "379/379 [==============================] - 0s 763us/step - loss: 171789095407461362101649408.0000 - val_loss: 886217319782838607885920894976.0000\n",
+      "379/379 [==============================] - 2s 5ms/step - loss: 968374.8568 - val_loss: 80911601.8268\n",
       "Epoch 2/5\n",
-      "379/379 [==============================] - 0s 51us/step - loss: nan - val_loss: nan            \n",
+      "379/379 [==============================] - 0s 66us/step - loss: 500359318509800.3750 - val_loss: 24687604349746812.0000\n",
       "Epoch 3/5\n",
-      "379/379 [==============================] - 0s 56us/step - loss: nan - val_loss: nan\n",
+      "379/379 [==============================] - 0s 91us/step - loss: 2696257614367065374720.0000 - val_loss: 141656078351355019788288.0000\n",
       "Epoch 4/5\n",
-      "379/379 [==============================] - 0s 47us/step - loss: nan - val_loss: nan\n",
+      "379/379 [==============================] - 0s 94us/step - loss: 58062508978749815988349304832.0000 - val_loss: 2738666882694949507047561887744.0000\n",
       "Epoch 5/5\n",
-      "379/379 [==============================] - 0s 58us/step - loss: nan - val_loss: nan\n"
+      "379/379 [==============================] - 0s 99us/step - loss: inf - val_loss: inf            \n",
+      "Train on 379 samples, validate on 127 samples\n",
+      "Epoch 1/5\n",
+      "379/379 [==============================] - 2s 5ms/step - loss: nan - val_loss: nan\n",
+      "Epoch 2/5\n",
+      "379/379 [==============================] - 0s 83us/step - loss: nan - val_loss: nan\n",
+      "Epoch 3/5\n",
+      "379/379 [==============================] - 0s 84us/step - loss: nan - val_loss: nan\n",
+      "Epoch 4/5\n",
+      "379/379 [==============================] - 0s 86us/step - loss: nan - val_loss: nan\n",
+      "Epoch 5/5\n",
+      "379/379 [==============================] - 0s 89us/step - loss: nan - val_loss: nan\n"
      ]
     }
    ],
    "source": [
     "model = network()\n",
-    "sgd = SGD(lr=0.2)\n",
+    "sgd = SGD(lr=0.04)\n",
+    "model.compile(optimizer=sgd,loss='mean_squared_error')\n",
+    "hist = model.fit(X_train_scaled, y_train_scaled, epochs=5,verbose=1, \n",
+    "                 validation_data=(X_test_scaled, y_test_scaled))\n",
+    "\n",
+    "model = network(activation='relu')\n",
+    "sgd = SGD(lr=0.5)\n",
     "model.compile(optimizer=sgd,loss='mean_squared_error')\n",
     "hist = model.fit(X_train_scaled, y_train_scaled, epochs=5,verbose=1, \n",
     "                 validation_data=(X_test_scaled, y_test_scaled))"
