--- a/Pregunta 1.ipynb
+++ b/Pregunta 1.ipynb
@@ -1405,8 +1405,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Explicar que son modernas que son variación de un mismo coso.\n",
-    "- mismas condiciones para todos"
+    "En esta sección de entrenarán los modelos de b) y c) utilizando estrategias modernas para adaptar la tasa de aprendizaje. Dentro de estás están Adagrad, Adadelta, RMSprop y Adam, además de la ya utilizada SGD. Se utilizará el mismo modelo y parámetros para todas las funciones.\n",
+    "\n",
+    "### SGD:\n",
+    "\n",
+    "En SGD los pesos de la red van cambiando de acuerdo con el gradiente de pérdida de los pesos. Además, el factor de tasa de aprendizaje mide la velocidad con que se realizan los cambios. Si es más pequeño, la convergencia será más lenta. Por otro lado, si es mayor conducirá a una divergencia en el modelo.\n",
+    "\n",
+    "### Adagrad:\n",
+    "\n",
+    "Adagrad o *adaptive gradient algorithm*, es una versión modificada de SGD la cual escala la tasa de aprendizaje para cada parámetro. Se calcula dividiendo el gradiente actual en la regla de actualización por la suma de los gradientes previos. Como resultado, lo que sucede es que cuando el gradiente es muy grande, la tasa se reduce y viceversa. Esta estrategia a menudo mejora el rendimiento de convergencia sobre el descenso de gradiente estocástico estándar en entornos donde los datos son escasos y los parámetros dispersos son más informativos.\n",
+    "\n",
+    "### RMSProp:\n",
+    "\n",
+    "RMSProp (Root Mean Square Propagation) también es un método de learning rate adaptativo para cada parámetro. La diferencia con Adagrad es que la actualización de pesos se calcula mediante el promedio de decaimiento exponencial y no la suma de gradientes.\n",
+    "\n",
+    "### AdaDelta:\n",
+    "\n",
+    "El método se adapta dinámicamente a lo largo del tiempo utilizando solo información de primer orden y tiene una carga computacional mínima más allá de SGD. El método no requiere ajuste manual de una tasa de aprendizaje y parece robusto a la información de gradiente de ruido.\n",
+    "\n",
+    "### Adam:\n",
+    "\n",
+    "Adam (abreviatura de Adaptive Moment Estimation) es una actualización del optimizador RMSProp. En este algoritmo de optimización, se utilizan promedios corrientes tanto de los gradientes como de los segundos momentos de los gradientes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se utiliza los modelos de b) y c) pero ahora se cambia la función de optimización. Se prueban las configuraciones para sigmoid y relu, graficando luego sus resultados."
    ]
   },
   {
@@ -1512,6 +1538,13 @@
     "plt.xlabel('Epochs')\n",
     "plt.ylabel('Error')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se observa que para todas las configuraciones el error de SGD es mayor al de los otros métodos de optimización de pesos, siendo el resto muy superiores con una mayor velocidad de convergencia."
    ]
   },
   {
@@ -1911,7 +1944,7 @@
    "source": [
     ">j) Fijando todos los demás hiper-parámetros del modelo definido en b) y en c), utilice validación cruzada con un número de folds igual a K = 5 y K=10 para determinar el mejor valor correspondiente a un parámetro que usted elija (tasa de aprendizaje, número de neuronas, parámetro de regularización, etc) ¿El mejor parámetro para la red con sigmoidal es distinto que para ReLU? ¿Por qué sucede? Además mida el error real del modelo sobre el conjunto de pruebas, compare y concluya.\n",
     "\n",
-    "Se encontrará el mejor para el learning rate. Con kfold 10."
+    "Se encontrará cual es el mejor valor de *learning rate*, utilizando la técnica de validación cruzada con número de folds igual a K=5 y K=10. Para esto se definirá una arquitectura con las características de las redes de b) y c):  200 neuronas en capa oculta, pesos uniformes, activación sigmoidal/relu, uso de SGD, 300 epochs y función de pérdida MSE."
    ]
   },
   {
@@ -1940,6 +1973,13 @@
     "    sgd = SGD(lr=rate)\n",
     "    model.compile(optimizer=sgd,loss='mean_squared_error')\n",
     "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se generan 20 valor para probar entre 1e-5 y 1e-0.3~0.5, rango determinado por la experimentación en la sección previa en que se analizó el cambio de learning rate en los modelos."
    ]
   },
   {
@@ -1983,12 +2023,15 @@
     }
    ],
    "source": [
-    "# import numpy as np\n",
-    "# Xm = X_train_scaled#.as_matrix()\n",
-    "# ym = y_train_scaled#.as_matrix()\n",
-    "# kfold = cross_validation.KFold(len(Xm), n_folds=10)\n",
     "learning_rates = np.logspace(-5, -0.3, 20)\n",
     "print(learning_rates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para la primera parte se experimentará con K=10. Se promediarán los resultados para entregar un error de test para cada valor de tasa de aprendizaje."
    ]
   },
   {
@@ -2061,13 +2104,11 @@
     "        # evaluate the model\n",
     "        scores = model.evaluate(Xm.iloc[val], ym[val], verbose=0)\n",
     "        cvscores.append(scores)\n",
-    "    #mse_cv = np.mean(cvscores)\n",
     "    print(\"Learn rate: %f\\tError CV: %f \" %(lr, np.mean(cvscores)))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {
      "autoexec": {
@@ -2078,8 +2119,11 @@
     "colab_type": "code",
     "id": "RPRlOJhGKFP0"
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Para la arquitectura con función de activación sigmoidal, a medida que se aumenta la tasa de aprendizaje va disminuyendo el error hasta un punto en que comienza a variar sin patrón alguno. Además, la red comienza a diverger desde 0.051348.\n",
+    "\n",
+    "El error más bajo se obtiene con una tasa de aprendizaje de 0.029051, y es de 0.227849. Así, utilizando esta tasa en un modelo sin kfolds se tiene un error de 0.268466."
+   ]
   },
   {
    "cell_type": "code",
@@ -2130,7 +2174,7 @@
     "id": "CHY4a4QQKFP5"
    },
    "source": [
-    "Para relu"
+    "Se utiliza el mismo modelo definido, ahora con función de activación ReLU, con un valor de K=10 (se separa en dos ejecuciones puesto que se perdió la conección con colab y ejecutar todo de nuevo gastaba mucho tiempo)"
    ]
   },
   {
@@ -2243,6 +2287,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A medida que va aumentando la tasa de aprendizaje el error del modelo disminuye hasta que la red diverge con 0.501187. El menor error se obtiene con un learning rate de 0.029051, al igual que la función sigmoidal, pero en este caso el error de entrenamiento es la mitad del obtenido en la evaluación del anterior. Respecto a los otros errores, estos son en toda oportunidad más bajos que los de la red con sigmoidal.\n",
+    "\n",
+    "Habiendo encontrado la mejor tasa, se aplica en el entrenamiento de una nueva red sin kfold, cuyo error de test es de 0.177960, por debajo del error de la red sigmoidal."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
@@ -2291,7 +2344,7 @@
     "id": "_TJEYQ2VKFQF"
    },
    "source": [
-    "Con kfold=5"
+    "Ahora, se hace la misma comparación hecha anteriormente pero kfold con k=5. Los modelos siguen siendo iguales. (también hubo problemas con colab así que se separa en dos for)."
    ]
   },
   {
@@ -2404,6 +2457,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se repite que la red diverge con un learning rate de 0.051348 y el error más bajo se da con una tasa de 0.029051, pero a diferencia de utilizar k=10 el error es aprox. 3 centesimos más pequeño.\n",
+    "\n",
+    "Usando la tasa encontrada se vuelve a entrenar una red con un error de test de 0.271508 aprox, mayor al usar kfold."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -2452,7 +2514,7 @@
     "id": "PE--Gb_QKFQM"
    },
    "source": [
-    "Para relu"
+    "Ahora, se entrena una red con ReLU con K=5."
    ]
   },
   {
@@ -2526,6 +2588,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para este experimento el valor más bajo de error se obtuvo con una tasa de 0.090760, diferente a la de sigmoidal y al experimento con K=10. Con esta tasa se entrena una red cuyo error de test es de 0.186419 aprox, mayor al de entrenamiento con k=5 pero más bajo que la de sigmoidal.\n",
+    "\n",
+    "Así, aunque se varíe la tasa de aprendizaje, se producen mejores resultados con una función de activación ReLU."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
@@ -2565,6 +2636,13 @@
     "model = network_lr(activation='relu', rate=0.090760)\n",
     "model.fit(X_train_scaled,y_train_scaled, epochs=300, verbose=0)\n",
     "print(\"Test loss for relu: \", model.evaluate(X_test_scaled, y_test_scaled, verbose=0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este trabajo se demostró que para diferentes configuraciones (tasa de aprendizaje, agregar regularizadores, mini-batches, cambio de optimizadores, entre otros), combiene siempre utilizar una función de activación ReLU con redes neuronales para el estudio del dataset boston housing. "
    ]
   }
  ],
