--- a/Pregunta 1.ipynb
+++ b/Pregunta 1.ipynb
@@ -1287,7 +1287,9 @@
    "source": [
     ">f) Entrene los modelos considerados en b) y c) utilizando SGD en mini-batches. Experimente con diferentes tamaños del batch. Comente.\n",
     "\n",
-    "- que es mini batch y que hace en sgd"
+    "A continuación se estudiará la incidencia de entrenar ambas redes, Sigmoid y ReLU, utilizando SGD con mini-batches. Esta técnica es una variación del SGD original, en donde el conjunto de entrenamiento es dividido en pequeños batches o lotes, los cuales son utilizados para calcular el error del modelo y actualizar sus pesos.\n",
+    "\n",
+    "Para estas pruebas se utilizará una tasa de aprendizaje de 0.01 para todas as variaciones de tamaño de mini-batch, con el objetivo de poder comparar su efecto en el error de entrenamiento."
    ]
   },
   {
@@ -1384,11 +1386,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- efectos: mayor minibatch más lento aprende, mayor error, además explora el espacio sesgado por todos los datos, teniendo que calcular el grandiente por todos estos datos. con batch más chico converge más rápido, no son tan complejos y especificos por lo que generalizan más . \n",
-    "- con sigmoid tiene errores más grandes y resultados con varianza por el zigzagueo de la curva. \n",
-    "- Conclu: relu sigue funcionando mejor en el problema\n",
-    "- mencionar comportamiento minibatch = 2\n",
-    "- por defecto = 32"
+    "Los gráficos presentados resumen el error de entrenamiento por epoch sobre las dos arquitecturas, con distintos tamaños de mini-batches. En estos se puede ver como a mayor tamaño de los mini-batches la rede aprende más lento, por lo que le cuesta converger, teniendo un mayor error de MSE como para los batches de tamaño 379 (línea rosada) para ambas funciones de activación. Por el contrario, con mini-batches más pequeños se lográ un error más pequeño el cual a su vez converge más rápido como los mini-batches de 2 o 20 (linea azul y amarilla, respectivamente).\n",
+    "\n",
+    "Además se puede apreciar que bajo las mismas condiciones para ambas redes, con función de activación Sigmoid y ReLU, la arquitectura ReLU, tiene un mejor rendimiento, pues por ejemplo con mini-batches de tamaño 2, con ReLU se logra un error casi del 0%, mientras que con la Sigmoid es mayor al 10%. Importante de hacer notar es el comportamiento extraño que tiene la función Sigmoid con tamaño de mini-batches de 2, el cual a pesar de ser extraño igualmente logra el comportamiento mencionado.\n",
+    "\n",
+    "Así, el tamaño del mini-batch al ser pequeño funciona mejor, pues el error es menor y converge más rápido, lo cual ocurre debi a que los modelos obtenidos no son tan coplejos y especificos permitiendo generalizar más. Por otro lado al ser mayor el tamaño de mini-batch el error es mayor y se aprende más lento, lo cual ocurre ya que al calcular la dirección del gradiente tiene que hacerlo con mucho mas elementos, y por ejemplo, en el caso extremo de tomar todos el dataset de entrenamiento como un mini-batch esto sería muy lento, y la búsqueda estaría sesgada en la parte del espacio de búsqueda en que estén los datos.\n",
+    "\n",
+    "Para este problema, la función de activación ReLU sigue teniendo un mejor rendimiento en comparación a la Sigmoidal bajo las mismas condiciones, y se recomienda utilizar mini-batches pequeños. Es bueno saber que en la ejecución por defecto de [Keras](https://keras.io/models/sequential/), se entrena con mini-batch de tamaño 32."
    ]
   },
   {
@@ -1544,14 +1548,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se observa que para todas las configuraciones el error de SGD es mayor al de los otros métodos de optimización de pesos, siendo el resto muy superiores con una mayor velocidad de convergencia."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- adam utiliza tecnica para adaptar el momentum y encontar optimos mejores"
+    "Se observa que para todas las configuraciones el error de Adadelta es mayor al de los otros métodos de optimización de pesos, siendo el resto muy superiores con una mayor velocidad de convergencia. Ademas, los modelos con activación lineal convergen con mayor velocidad a valores menores que los modelos con sigmoidl, tanto para los casos de entrenamiento como para los casos de prueba.\n",
+    "\n",
+    "Tanto para la red con sigmoidal como para la red con relu el orden respecto a los errores de entrenamiento es Adadelta, SGD, Adagrad, RMSProp y Adam, de mayor error a menor. Adagrad tiene una rápida convergencia llegando a los pocos epochs a un óptimo local, lo que dice que al encontrar la solución le cuesta mucho diversificar y queda estancado no pudiendo mejorar la calidad de la solución en el tiempo. \n",
+    "\n",
+    "Siguiendo en el orden de los optimizadores según la calidad de los modelos, RMSProp mejora su entrenamiento sobre los 50 epochs estabilizándoce cerca de los 150 epoch para sigmoidal y 50 para relu. Este optimizador es de los que tiene una mayor varianza pues sus curvas, para entrenamiento y prueba, tiene picos más pronunciados de error a lo largo del gráfico.\n",
+    "\n",
+    "En general, Adam entrena los modelos con menor MSE y con una mayor tasa de convergencia, teniendo muy cerca a RMSprop. Esta superioridad se da pues Adam utiliza una ténica par adaptar el momentum lo que le permite encontrar mejores óptimos. En los gráficos de error de testing no es el mejor optimizador al final de los 300 epochs por una brecha pequeña, pero si se fuese el caso de que hay recursos limitados de tiempo para entrenar los modelos alcanza mejores resultados que el resto con menos iteraciones."
    ]
   },
   {
@@ -1561,14 +1564,21 @@
     "id": "AxsuDRJBKFPR"
    },
    "source": [
-    "h) Entrene los modelos obtenidos en b) y c) utilizando regularizadores $l_1$ y $l_2$ (weight decay). Compare los desempeños de prueba obtenidos antes y después de regularizar. Experimente con distintos valores del parámetro de regularización y comente. Además evalúe el efecto de regularizar solo la primera capa vs la segunda, comente."
+    ">h) Entrene los modelos obtenidos en b) y c) utilizando regularizadores $l_1$ y $l_2$ (weight decay). Compare los desempeños de prueba obtenidos antes y después de regularizar. Experimente con distintos valores del parámetro de regularización y comente. Además evalúe el efecto de regularizar solo la primera capa vs la segunda, comente."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "que es un regularizador y que es lo que se va a hacer"
+    "La regularización o weight decay es una forma estándar en Machine Learning en general de penalizar los pesos aprendidos por la red. La idea es mantener una porción de los pesos pequeños o ceros, a menos que existan pesos que efectivamente son grandes, los cuales serían las características verdaderamente importantes, ayudando a que los modelos además sean interpretables. La regularización puede ser según la norma $l_1$ o $l_2$, donde la primera penaliza según el valor absoluto lo que hace que algunos pesos se conviertan en cero y otro sean grandes, y el segundo penaliza el cuadrado de los pesos llevando los pesos a valores pequeños pero no cero.\n",
+    "\n",
+    "Se crea la función regu_network que entrena la red neuronal según los parámetros entregados, es decir:\n",
+    "* activation: función de activación, Sigmoid o ReLU.\n",
+    "* first: si se aplica regularización a la primera capa.\n",
+    "* second: si se aplica regularización a la segunda capa.\n",
+    "* regu: el tipo de regularización, $l_1$ o $l_2$.\n",
+    "* rate: tasa de regularización a aplicar."
    ]
   },
   {
@@ -1616,7 +1626,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "para sigmoid y relu se prueban modelos sin regu, con regu en ambas capas y alternando regu entre primera y segunda.\n"
+    "A continuación se prueba entrenando modelos con ambas funciones de activación sin regularización, con la misma regularización en ambas capas y alternando la regularización entre capas.\n"
    ]
   },
   {
@@ -1673,14 +1683,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "para ambos casos funciona mejor sin regularizacion, siendo mayores al ocupar l1 y al tener en las dos capas"
+    "A través de los errores de prueba se puede ver como para ambas arquitecturas de red, Sigmoid y ReLU, funciona mejor sin regularización. Además, se puede ver como ocupar $l_1$ afecta más en el error, pues en todas las instancias dicho error de test es mayor, efecto que se intensifica con ambas capas de regularización $l_1$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "luego se varia el ratio de regula combinando sigmoid y relu con l1 y l2"
+    "Ahora, se prueba variando la tasa de regularización de $l_1$ y $l_2$, combiandola con las dos funciones de activación en estudio."
    ]
   },
   {
@@ -1779,9 +1789,9 @@
     "id": "KYnQ2wu1KFPd"
    },
    "source": [
-    "Mejores resultados sin regularizar excepto en un caso. a medida que se aumenta el ratio también aumenta el error.\n",
+    "En base a los errores de test mostrados anteriormente, se puede ver que se mantiene el hecho que sin regularización se tiene un mejor desempeño para ambas arquitecturas. Existe una excepción, en la arquitectura Sigmoidal con regularización $l_2$ ratio 0.0001, donde el error es 0.373576 y disminuye 0.02 en comparación a la no regularización, por lo que en base a esta evidencia se podría pensar que disminuyendo tal ratio se podría disminuir el error, llegando al punto que no se penalizará. Tamibén se puede ver como a medida que el ratio aumento el error también lo hace, para ambos tipos de regularización.\n",
     "\n",
-    "para este problema con una capa oculta (shallow) un regularizador no tiene impacto positivo en la prediccion"
+    "Así, para este problema entrenando redes con solo una capa oculta (shadow net) y con distintia función de activación se tiene un comportamiento similar que es que no tiene un impacto positivo en la predicción, pues pareciera que el efecto que tienen es quitar información necesaria a los atributos que aprende, por lo que no puede realizar una buena predicción."
    ]
   },
   {
@@ -1798,7 +1808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "que es y que se va a hacer"
+    "A continuación se entrenarán las redes estudiadas utilizando dropout, que es una técnica utilizada para reducir el efecto de overfitting. El valor de dropout indica el porcentaje de la capa saliente que son asignadas con cero."
    ]
   },
   {
@@ -1929,10 +1939,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "con la sigmoid sube y con relu se mantiene cercano al valor sin dropout, relu es robusta al dropout ya que se mantine casi invariante .\n",
-    "podría servir con valores más pequeños\n",
+    "A través del error de test se puede ver que para las distintas tasas de dropout con la función de activación sigmoidal se comporta peor que con la función de activación ReLU, la cual se mantiene cercano al error sin dropout, permaneciendo casi invariante (a lo más experimenta una modificación de -0.01). Para ver mayor efecto, se podría probar con tasas más pequeñas de dropout, como 0.000001.\n",
     "\n",
-    "no conviene ocupar"
+    "Para este problema con las redes neuronales entrenadas, no entrega un beneficio importante utilizar dropout."
    ]
   },
   {
